Improved experiencce + site metadata

--- a/src/components/Sections/Experience.astro
+++ b/src/components/Sections/Experience.astro
@@ -8,6 +8,7 @@ import {
   Discord,
   Docker,
   Firebase,
+  Googleads,
   Javascript,
   Jest,
   Mongodb,
@@ -19,10 +20,12 @@ import {
   Php,
   Prisma,
   Puppeteer,
+  Python,
   React,
   Redis,
   Redux,
   Serverless,
+  Sqlite,
   Trpc,
   Typescript,
   Wix,
@@ -47,8 +50,9 @@ import TechnologiesWrapper from "../TechnologiesWrapper.astro";
       from="Aug 2023"
       company={{ name: "Keep", link: "https://trykeep.com" }}
       featuredResponsabilities={[
-        "Integration with Hubspot CRM via Segment",
-        "Made the app mobile responsive",
+        "Owned Segment, Hubspot and Ad Conversion tools integrations such as G-Ads, FB Business and Linkedin Ads.",
+        "Made the application process mobile responsive.",
+        "Worked on multiple enhacenments on Bank Accounts connections.",
       ]}
     >
       <TechnologiesWrapper slot="technologies">
@@ -63,6 +67,7 @@ import TechnologiesWrapper from "../TechnologiesWrapper.astro";
         <Trpc class="fill-indigo-400 dark:fill-white" />
         <Docker class="fill-indigo-400 dark:fill-white" />
         <Yarn class="fill-indigo-400 dark:fill-white" />
+        <Googleads class="fill-indigo-400 dark:fill-white" />
       </TechnologiesWrapper>
     </ExperienceItem>
 
@@ -76,7 +81,7 @@ import TechnologiesWrapper from "../TechnologiesWrapper.astro";
         {
           title: "Ssr Advanced Fullstack Engineer",
           featuredResponsabilities: [
-            "Integrated a Payment Gateway Provider, cutting Chargeback expenses by 99.4% through the implementation of AVS.",
+            "Integrated a Payment Gateway Provider, cutting chargeback expenses by 99.4% through the implementation of AVS.",
             "Launched a robust back-office platform for Call Center Agents, with monthly sales exceeding $200,000.",
             "Development of a Websockets Integration that reduced the Customer Purchase Cycle Time up to 40%.",
           ],
@@ -147,14 +152,20 @@ import TechnologiesWrapper from "../TechnologiesWrapper.astro";
       from="Nov 2020"
       to="Jun 2021"
       company={{ name: "Ponceleon Software" }}
-      featuredResponsabilities={[]}
+      featuredResponsabilities={[
+        "Development and enhancement of Wordpress sites.",
+        "Creation of an internal Time Tracking and Productivity Monitoring tool.",
+        "Worked on multiple back-office customization plugins.",
+      ]}
     >
       <TechnologiesWrapper slot="technologies">
         <Wordpress class="fill-indigo-400 dark:fill-white" />
         <Php class="fill-indigo-400 dark:fill-white" />
         <Nodedotjs class="fill-indigo-400 dark:fill-white" />
         <Javascript class="fill-indigo-400 dark:fill-white" />
+        <Python class="fill-indigo-400 dark:fill-white" />
         <Firebase class="fill-indigo-400 dark:fill-white" />
+        <Sqlite class="fill-indigo-400 dark:fill-white" />
       </TechnologiesWrapper>
     </ExperienceItem>
   </div>
