--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Social from "../components/Sections/Social.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Portfolio">
+<Layout title="Cesar Perez Portfolio">
   <main>
     <Header />
     <div class="grid grid-cols-1 gap-8">
@@ -15,7 +15,7 @@ import Layout from "../layouts/Layout.astro";
         <Profile
           badgeStatus="Not looking for jobs."
           title="Cesar Perez"
-          description="Senior Fullstack Engineer"
+          description="Sr. Fullstack Engineer 🥸"
         />
         <Experience />
       </div>
