--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Layout from "../layouts/Layout.astro";
         <Profile
           badgeStatus="Not looking for jobs."
           title="Cesar Perez"
-          description="Sr. Fullstack Engineer 🥸"
+          description="Sr. Fullstack Engineer"
         />
         <Experience />
       </div>
