fix mustache.json lottie + fix email icon

--- a/src/components/AnimatedIconLottie.astro
+++ b/src/components/AnimatedIconLottie.astro
@@ -3,5 +3,5 @@ import LottieAnimation from "astro-integration-lottie/Lottie.astro";
 ---
 
 <div class="inline-block" style="width: 45px;">
-  <LottieAnimation src="assets/mustache.json" autoplay="visible" />
+  <LottieAnimation src="src/public/assets/mustache.json" autoplay="visible" />
 </div>
