--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -34,7 +34,7 @@ import AnimatedIconLottie from "./AnimatedIconLottie.astro";
       >
         {title}
       </h1>
-      <div class="flex flex-row gap-1 items-center">
+      <div class="flex flex-col gap-0 md:gap-1 items-center md:flex-row">
         <p
           class="text-slate-700 text-sm sm:text-lg dark:text-slate-300 max-w-xl rounded-2xl"
         >
