fix path for mustache lottie animation

--- a/src/components/AnimatedIconLottie.astro
+++ b/src/components/AnimatedIconLottie.astro
@@ -3,7 +3,7 @@ import LottieAnimation from "astro-integration-lottie/Lottie.astro";
 ---
 
 <div class="inline-block" style="width: 45px;" id="mustache_container">
-  <LottieAnimation src="public/assets/mustache.json" autoplay="visible" />
+  <LottieAnimation src="/assets/mustache.json" autoplay="visible" />
 </div>
 <style>
   .white_mustache {
