--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import Header from "../components/Header.astro";
-import Profile from "../components/Profile.astro";
 import Email from "../components/Sections/Email.astro";
 import Experience from "../components/Sections/Experience.astro";
+import Header from "../components/Sections/Header.astro";
+import Profile from "../components/Sections/Profile.astro";
 import Social from "../components/Sections/Social.astro";
 import Layout from "../layouts/Layout.astro";
 ---
