--- a/src/components/Sections/Profile.astro
+++ b/src/components/Sections/Profile.astro
@@ -7,7 +7,7 @@ interface Props {
 
 const { title, description, badgeStatus } = Astro.props;
 import { Briefcase, FileText, X } from "astro-feather-icons";
-import AnimatedIconLottie from "./AnimatedIconLottie.astro";
+import AnimatedIconLottie from "../../icons/AnimatedIconLottie.astro";
 ---
 
 <section class="flex flex-col sm:flex-row items-center gap-5">
