--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -33,26 +33,32 @@ const { title, from, to, featuredResponsabilities, company, subRoles } =
 </div><p class="text-sm text-slate-500 dark:text-slate-400 mb-2 mt-2">
   {from} — {to}
 </p>
-<ul
+<div
   class="list-disc flex flex-col gap-2 ml-5 text-slate-700 dark:text-gray-300 text-sm"
 >
   {
-    !subRoles
-      ? featuredResponsabilities.map((text: string) => <li>{text}</li>)
-      : subRoles.map((subRole: subRole) => (
-          <>
-            <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-200">
-              {subRole.title}
-            </h2>
-            <p class="text-sm text-slate-500 dark:text-slate-400 -mt-2">
-              {subRole.from} — {subRole.to}
-            </p>
-            <ul class="list-disc flex flex-col gap-2 ml-5 text-slate-700 dark:text-gray-300 text-sm">
-              {subRole.featuredResponsabilities.map((text: string) => (
-                <li>{text}</li>
-              ))}
-            </ul>
-          </>
-        ))
+    !subRoles ? (
+      <ul class="list-disc flex flex-col gap-2 ml-5 text-slate-700 dark:text-gray-300 text-sm">
+        {featuredResponsabilities.map((text: string) => (
+          <li>{text}</li>
+        ))}
+      </ul>
+    ) : (
+      subRoles.map((subRole: subRole) => (
+        <>
+          <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-200">
+            {subRole.title}
+          </h2>
+          <p class="text-sm text-slate-500 dark:text-slate-400 -mt-2">
+            {subRole.from} — {subRole.to}
+          </p>
+          <ul class="list-disc flex flex-col gap-2 ml-5 text-slate-700 dark:text-gray-300 text-sm">
+            {subRole.featuredResponsabilities.map((text: string) => (
+              <li>{text}</li>
+            ))}
+          </ul>
+        </>
+      ))
+    )
   }
-</ul>
+</div>
