--- a/src/components/Sections/Email.astro
+++ b/src/components/Sections/Email.astro
@@ -18,6 +18,7 @@ import { Copy, Mail, Send } from "astro-feather-icons";
       disabled=""
       class="bg-black/5 dark:bg-white/5 w-full py-0.5 px-3 rounded-lg grid place-items-center text-slate-600 dark:text-slate-300 text-sm"
       value={placeholder}
+      aria-label="Email"
     /><div class="flex gap-2">
       <div class="relative group/tooltip">
         <a
