--- a/src/components/Sections/Email.astro
+++ b/src/components/Sections/Email.astro
@@ -1,10 +1,12 @@
 ---
 interface Props {
-  placeholder: string;
+  email: string;
 }
 
-const { placeholder } = Astro.props;
-import { Copy, Mail, Send } from "astro-feather-icons";
+const { email } = Astro.props;
+import { Mail } from "astro-feather-icons";
+import CopyEmail from "../Buttons/CopyEmail.astro";
+import SendEmail from "../Buttons/SendEmail.astro";
 ---
 
 <section class="w-full">
@@ -17,33 +19,11 @@ import { Copy, Mail, Send } from "astro-feather-icons";
       type="text"
       disabled=""
       class="bg-black/5 dark:bg-white/5 w-full py-0.5 px-3 rounded-lg grid place-items-center text-slate-600 dark:text-slate-300 text-sm"
-      value={placeholder}
+      value={email}
       aria-label="Email"
     /><div class="flex gap-2">
-      <div class="relative group/tooltip">
-        <a
-          href=`mailto:${placeholder}`
-          target="_blank"
-          rel="noreferrer"
-          class="flex bg-indigo-100 hover:bg-opacity-80 dark:bg-indigo-500 hover:dark:bg-opacity-90 text-indigo-500 dark:text-indigo-100 py-2 px-2 rounded-lg"
-        >
-          <Send width="18" />
-          <span
-            class="absolute pointer-events-none transition-all opacity-0 z-20 bottom-full -translate-y-0 py-1 px-1.5 text-xs left-1/2 -translate-x-1/2 rounded-md whitespace-nowrap text-gray-200 bg-gray-800 dark:bg-white dark:text-gray-700 before:content-[''] before:absolute before:bg-gray-800 before:rounded-sm before:w-2.5 before:rotate-45 before:h-2.5 before:-bottom-1 before:-z-10 before:left-1/2 before:-translate-x-1/2 before:dark:bg-white before:dark:gray-800 group-hover/tooltip:opacity-100 group-hover/tooltip:-translate-y-3"
-            >Send me email</span
-          >
-        </a>
-      </div>
-      <div class="relative group/tooltip">
-        <button
-          class="flex bg-indigo-100 hover:bg-opacity-80 dark:bg-indigo-500 hover:dark:bg-opacity-90 text-indigo-500 dark:text-indigo-100 py-2 px-2 rounded-lg"
-        >
-          <Copy width="18" /></button
-        ><span
-          class="absolute pointer-events-none transition-all opacity-0 z-20 bottom-full -translate-y-0 py-1 px-1.5 text-xs left-1/2 -translate-x-1/2 rounded-md whitespace-nowrap text-gray-200 bg-gray-800 dark:bg-white dark:text-gray-700 before:content-[''] before:absolute before:bg-gray-800 before:rounded-sm before:w-2.5 before:rotate-45 before:h-2.5 before:-bottom-1 before:-z-10 before:left-1/2 before:-translate-x-1/2 before:dark:bg-white before:dark:gray-800 group-hover/tooltip:opacity-100 group-hover/tooltip:-translate-y-3"
-          >Copy email</span
-        >
-      </div>
+      <SendEmail email={email} />
+      <CopyEmail email={email} />
     </div>
   </div>
 </section>
