--- a/src/components/Sections/Social.astro
+++ b/src/components/Sections/Social.astro
@@ -13,8 +13,8 @@ import { AtSign, GitHub, Linkedin } from "astro-feather-icons";
       href="https://www.linkedin.com/in/cesaraugp"
       target="_blank"
       rel="noreferrer"
-      class="dark:!shadow-[0_0_0_2px_hsla(0,0%,100%,.06)] dark:hover:!shadow-[0_0_0_6px_hsla(0,0%,100%,.06)] flex items-center gap-3 px-4 h-16 rounded-xl text-sky-600 transition-shadow shadow-social-link shadow-social-link-hover"
-      ><Linkedin class="dark:fill-white" /> Linkedin</a
+      class="dark:!shadow-[0_0_0_2px_hsla(0,0%,100%,.06)] dark:hover:!shadow-[0_0_0_6px_hsla(0,0%,100%,.06)] flex items-center gap-3 px-4 h-16 rounded-xl text-sky-600 dark:text-white transition-shadow shadow-social-link shadow-social-link-hover"
+      ><Linkedin /> Linkedin</a
     >
 
     <a
