fix warn from VITE related to img path

--- a/src/components/Sections/Profile.astro
+++ b/src/components/Sections/Profile.astro
@@ -12,7 +12,7 @@ import Avatar from "../Avatar.astro";
 import Badge from "../Badge.astro";
 import ResumeButton from "../Buttons/Resume.astro";
 import ProfileDescription from "../ProfileDescription.astro";
-const PROFILE_PICTURE_PATH = "public/assets/avatar.jpg";
+const PROFILE_PICTURE_PATH = "/assets/avatar.jpg";
 ---
 
 <section class="flex flex-col sm:flex-row items-center gap-5">
